# travel-bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
tbot/: __main__.py  settings.py
tbot/bot/: middleware.py  resort_holiday_commands.py  startup.py
tbot/services/: base_http.py  resort_holiday.py  scheduler.py  storage.py
