[tool.poetry]
name = "tbot"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Vladimir Troflianin"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic-settings = "^2.4.0"
aiogram = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
