[tool.poetry]
name = "tbot"
package-mode = false
version = "0.2.0"
description = ""
authors = ["Vladimir Troflianin"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
APScheduler = "^3.10.4"
httpx = "^0.27.0"
motor = "3.6.0"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-mock = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
